workspace = { members = ["load_stl"] }
[package]
name = "embedded-gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
log = "0.4.20"
nalgebra = {version = "0.32.3", default-features = false, features = [ "libm" ] }
line_drawing = "1.0.0"
