workspace = { members = ["load_stl"] }
[package]
name = "embedded-gfx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kezii/embedded-gfx"
readme = "./README.md"
description = "3D graphics rendering for embedded systems"
keywords = [
    "embedded-graphics",
    "graphics",
    "embedded",
]
categories = [
    "embedded",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
log = "0.4.20"
nalgebra = {version = "0.32.3", default-features = false, features = [ "libm" ] }
line_drawing = "1.0.0"
